<?xml version="1.0"?>
<package format="2">
  <name>odometry_from_twist</name>
  <version>1.0.0</version>
  <description>Convert Kinematics (forward velocity and steering angle) into TwistWithCovariance for Odometry node</description>
  <maintainer email="adrian.koering@ovgu.de">Adrian Köring</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
